# neuroscope

./: CMakeLists.txt  README.md  core.h  microscope.cpp  microscope.h  pyproject.toml  python.cpp  random.h  scene.cpp  scene.h  swc.cpp  swc.h
src/: core.cpp  core.h  microscope.cpp  microscope.h  python.cpp  scene.cpp  scene.h  tissue.cpp  tissue.h
